2011-05-08  Francis Galiegue <fgaliegue@gmail.com>
	* device-src/device.c: add missing regfree() in case or regex compile
	  failure

2011-05-07  Francis Galiegue <fgaliegue@gmail.com>
	* device-src/ndmp-device.c: fix gcc 4.5.x warnings with enums

2011-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Fix errors/warnings found by klocwork
	* application-src/amstar.c: Fix errors/warnings found by klocwork

2011-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix klocwork bug.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Do not crash on unterminated quoted string.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Implement restore.
	  Generate index with only '/'.
	* perl/Amanda/Application/Zfs.pm: Add $self->{filesystem} on some
	  command, improve zfs_build_snapshotname.
	* server-src/list_dir.c (add_dir_list_item): Check if same dump.

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/local-security.c: Call initgroups before executing amandad

2011-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not count dup to tape when checking space
	  on holdingdisk.

2011-05-02  Jean-Louis Martineau <martineau@zmanda.com>
	Fix many errors/warnings found by klocwork
	* Many files.

2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Do not get "location" if bucket_location is not set.

2011-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Reply immediately a NO_NEW_TAPE if taper ask
	  REQUEST_NEW_TAPE after it is in TAPER_STATE_DONE.

2011-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Device.swg: Do not crash if an unknown device-property
	  is set.

2011-04-26  Jean-Louis Martineau <martineau@zmanda.com>
	Fix many errors/warnings found by klocwork
	* Many files.
