@@ -1,3 +1,6 @@
+2011-05-09  Francis Galiegue <fgaliegue@gmail.com>
+	* device-src/device.c: rework full device name validation
+
 2011-05-08  Francis Galiegue <fgaliegue@gmail.com>
 	* device-src/device.c: add missing regfree() in case or regex compile
 	  failure
